--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 body{
-    background:linear-gradient(90deg, #4568dc 0%,#b06ab3 100% );
+    /* background:url(./images/backgrounds/unnamed.jpg);
+    background-repeat: no-repeat;
+    background-size: cover; */
+    /* background:linear-gradient(90deg, #4568dc 0%,#b06ab3 100% ); */
+    background:linear-gradient(90deg, #4568dc 0%,#853d88 100% );
 }
